@@ -34,7 +34,7 @@ dependencies {
     // https://mvnrepository.com/artifact/xom/xom
     implementation group: 'xom', name: 'xom', version: '1.3.5'
 
-    errorprone 'com.google.errorprone:error_prone_core:2.4.0'
+    errorprone 'com.google.errorprone:error_prone_core:2.6.0'
 }
 
 application {
@@ -51,7 +51,7 @@ test {
 /// Error Prone linter
 
 dependencies {
-  errorprone("com.google.errorprone:error_prone_core:2.3.4")
+  errorprone("com.google.errorprone:error_prone_core:2.6.0")
   // JDK 8 support for Error Prone:
   errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
 }
@@ -59,6 +59,19 @@ tasks.withType(JavaCompile).configureEach {
   options.compilerArgs << "-Xlint:all" << "-Werror"
   options.errorprone {
     disable("ReferenceEquality") // Use Interning Checker instead.
+  }
+  if (JavaVersion.current() == JavaVersion.VERSION_16) {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+    ]
   }
 }
 
